--- a/Front/Register.html
+++ b/Front/Register.html
@@ -2,20 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="stylesRegister.css">
     <title>Registro</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <body>
-<h1>Crear nueva cuenta</h1>
-<img src="Imagenes/Logo%20inicial.png">
+<div class="imagen">
+    <img src="Imagenes/Logo%20inicial.png">
+</div>
+
 <div class="formulario">
-    <form>
-        <label>NOMBRE<input type="text" placeholder="Camilo"></label>
-        <label>APELLIDO<input type="text" placeholder="Rojas"></label>
-        <label>CORREO<input type="email" placeholder="camilo@gmail.com"></label>
-        <label>TELEFONO<input type="number" placeholder="3274356321"></label>
-        <label>USUARIO<input type="text" placeholder="camilo22"></label>
-        <label>CONTRASEÑA<input type="password" placeholder="12345678"></label>
-        <button>REGISTRARSE</button>
+    <h1>Crear nueva cuenta</h1>
+    <form class="container">
+        <label class="col-6">NOMBRE
+            <input type="text" placeholder="Camilo"></label>
+        <label class="col-6">APELLIDO
+            <input type="text" placeholder="Rojas"></label>
+        <label class="col-6">CORREO
+            <input type="email" placeholder="camilo@gmail.com"></label>
+        <label class="col-6">TELEFONO
+            <input type="number" placeholder="3274356321"></label>
+        <label class="col-6">USUARIO
+            <input type="text" placeholder="camilo22"></label>
+        <label class="col-6">CONTRASEÑA
+            <input type="password" placeholder="12345678"></label>
+        <button class="col-3">REGISTRARSE</button>
     </form>
 </div>
 
