--- a/Vista/Register.html
+++ b/Vista/Register.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="stylesRegister.css">
+    <link rel="stylesheet" href="Estilos/stylesRegister.css">
     <title>Registro</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <body>
 <div class="imagen">
-    <img src="Imagenes/Logo%20inicial.png">
+    <img src="Imagenes/logosinfondo.png">
 </div>
 
 <div class="formulario">
