--- a/Vista/index.html
+++ b/Vista/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Estilos/style.css">
     <title>Document</title>
 </head>
 <body>
 <div class="container">
 <h1 class="rotated">MONEY MATE</h1>
     <div class="background">
-        <img src="Imagenes/Logo%20inicial.png">
+        <img src="Imagenes/logosinfondo.png">
         <form>
             <label> USUARIO
                 <input type="email">
