agrego unos comentarios y el gitignore para que no se suba el nodemodules a el repo, es una mala practica y genera problemas

--- a/Vista/index.html
+++ b/Vista/index.html
@@ -27,6 +27,8 @@
         </form>
     </div>
 </div>
+
+<!--este script maneja el login con el form y llama con una promesa a la ruta del login post que esta en server.js-->
 <script>
     document.getElementById('loginForm').addEventListener('submit', function(event) {
         event.preventDefault();
