esta organizado todo en dos carpetas, Back y Vista, en la vista esta todo el front y el manejo de las solicitudes de login y registro de usuarios, en el Back el server tambien esta actualizado usando middlewares para subdividir las solicitudes a la Base de datos por ahora solo del login y el register tambien saque la conexion a la base de datos a los middlewares de login y register, por lo tanto debe importarse la conexion cuando se hagan los otros middlewares

--- a/Vista/personalizarPresupuesto.html
+++ b/Vista/personalizarPresupuesto.html
@@ -10,13 +10,13 @@
 </head>
 <body>
 <header class="menu">
-    <a href="Menu.html" class="logo_blanco_container"><img class="logo_blanco" src="Imagenes/logoBlanco-transformed.png"></a>
+    <a href="menu.html" class="logo_blanco_container"><img class="logo_blanco" src="Imagenes/logoBlanco-transformed.png"></a>
 
     <ul class="lista">
-        <li><a href="RegistroGastos.html">REGISTRAR GASTOS</a></li>
-        <li><a href="PersonalizarPresupuesto.html">PERSONALIZAR PRESUPUESTO</a></li>
-        <li><a href="RegistroGastos.html">SEGUIMIENTO</a></li>
-        <li><a href="RegistroGastos.html">REPORTE</a></li>
+        <li><a href="registroGastos.html">REGISTRAR GASTOS</a></li>
+        <li><a href="personalizarPresupuesto.html">PERSONALIZAR PRESUPUESTO</a></li>
+        <li><a href="registroGastos.html">SEGUIMIENTO</a></li>
+        <li><a href="registroGastos.html">REPORTE</a></li>
     </ul>
 </header>
 
