--- a/Vista/register.html
+++ b/Vista/register.html
@@ -15,30 +15,30 @@
 
 <div class="formulario">
     <h1>Crear nueva cuenta</h1>
-    <form class="container" method="POST" action="/register">
+    <form class="container" method="POST" action="/register" id="formRegister">
         <label class="col-6">NOMBRE
-            <input type="text" name="nombre" placeholder="Camilo">
+            <input type="text" name="nombre" placeholder="Camilo" id="nombre">
         </label>
         <label class="col-6">APELLIDO
-            <input type="text" name="apellido" placeholder="Rojas">
+            <input type="text" name="apellido" placeholder="Rojas" id="apellido">
         </label>
         <label class="col-6">CORREO
-            <input type="email" name="email" placeholder="camilo@gmail.com">
+            <input type="email" name="email" placeholder="camilo@gmail.com" id="email">
         </label>
         <label class="col-6">TELEFONO
-            <input type="number" name="telefono" placeholder="3274356321">
+            <input type="number" name="telefono" placeholder="3274356321" id="telefono">
         </label>
         <label class="col-6">USUARIO
-            <input type="text" name="usuario" placeholder="camilo22">
+            <input type="text" name="usuario" placeholder="camilo22" id="usuario">
         </label>
         <label class="col-6">CONTRASEÑA
-            <input type="password" name="password" placeholder="12345678">
+            <input type="password" name="password" placeholder="12345678" id="password">
         </label>
         <button type="submit" class="col-3 scale-up-center">REGISTRARSE</button>
 
     </form>
 </div>
-
+<script src="./Scripts/HandleRegister.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-kr0IcPxzcVBfAJa8GjNHPB2Qk2OqjPLf1m/Xw0Hc8QrIzJHbTz+Qi4AgKagKfobF" crossorigin="anonymous"></script>
 </body>
 </html>
