Se modifico la base de datos donde se ingresaton los administradores y el resto de usuarios que se creen van a ser usuarios normales y en el login valida si es usuario o admin ara redirigir a diferentes paginas

--- a/Vista/index.html
+++ b/Vista/index.html
@@ -14,7 +14,7 @@
     <div class="background">
         <img src="Imagenes/logosinfondo.png">
         <form id="loginForm">
-            <label> USUARIO
+            <label> CORREO
                 <input type="email" id="email" required>
             </label>
             <label> CONTRASEÑA
