Vista seguimiento y reporte

--- a/Vista/menu.html
+++ b/Vista/menu.html
@@ -20,7 +20,7 @@
     <ul class="lista">
         <li><a href="registroGastos.html">REGISTRAR GASTOS</a></li>
         <li><a href="personalizarPresupuesto.html">PERSONALIZAR PRESUPUESTO</a></li>
-        <li><a href="registroGastos.html">SEGUIMIENTO</a></li>
+        <li><a href="seguimientoGastos.html">SEGUIMIENTO</a></li>
         <li><a href="registroGastos.html">REPORTE</a></li>
     </ul>
 </header>
