--- a/Vista/registroGastos.html
+++ b/Vista/registroGastos.html
@@ -16,8 +16,8 @@
     <ul class="lista">
         <li><a href="registroGastos.html">REGISTRAR GASTOS</a></li>
         <li><a href="personalizarPresupuesto.html">PERSONALIZAR PRESUPUESTO</a></li>
-        <li><a href="registroGastos.html">SEGUIMIENTO</a></li>
-        <li><a href="registroGastos.html">REPORTE</a></li>
+        <li><a href="seguimientoGastos.html">SEGUIMIENTO</a></li>
+        <li><a href="reporte.html">REPORTE</a></li>
     </ul>
 </header>
     <header id="Titulo" class="container-fluid ">
