--- a/Vista/registroGastos.html
+++ b/Vista/registroGastos.html
@@ -2,63 +2,62 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="Estilos/RegistroGastos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <title>Document</title>
+    <title>Registro de Gastos</title>
 </head>
 <body>
 
 <header class="menu">
-    <a href="menu.html" class="logo_blanco_container"><img class="logo_blanco" src="Imagenes/logoBlanco-transformed.png"></a>
+    <a href="menu.html" class="logo_blanco_container"><img class="logo_blanco" src="Imagenes/logoBlanco-transformed.png" alt="Logo"></a>
     <ul class="lista">
         <li><a href="registroGastos.html">REGISTRAR GASTOS</a></li>
         <li><a href="personalizarPresupuesto.html">PERSONALIZAR PRESUPUESTO</a></li>
-        <li><a href="registroGastos.html">SEGUIMIENTO</a></li>
-        <li><a href="registroGastos.html">REPORTE</a></li>
+        <li><a href="seguimiento.html">SEGUIMIENTO</a></li>
+        <li><a href="reporte.html">REPORTE</a></li>
     </ul>
 </header>
-    <header id="Titulo" class="container-fluid ">
-        <h1 id="registro">Registro de gastos</h1>
-    </header>
-    <div class="row">
+
+<header id="Titulo" class="container-fluid">
+    <h1 id="registro">Registro de gastos</h1>
+</header>
+
+<div class="row">
     <aside id="logo" class="col-3">
-        <img  id="cerdo" src="Imagenes/logosinfondo.png">
+        <img id="cerdo" src="Imagenes/logosinfondo.png" alt="Logo">
     </aside>
     <main id="principal" class="col-7">
         <form id="formulario">
             <div class="element_form">
-                <label id="cantidad">Cantidad
-                   <input type="number">
+                <label for="cantidad">Cantidad
+                    <input type="number" id="cantidad" name="cantidad" required>
                 </label>
             </div>
             <div class="element_form">
-                <label id="fecha">Fecha
-                    <input type="date">
+                <label for="fecha">Fecha
+                    <input type="date" id="fecha" name="fecha" required>
                 </label>
             </div>
             <div class="element_form">
-                <label id="descripcion">Descripcion
-                    <input type="text">
+                <label for="descripcion">Descripción
+                    <input type="text" id="descripcion" name="descripcion" required>
                 </label>
             </div>
             <div class="element_form">
-                <label id="id">ID
-                    <input type="number">
-                </label>
-            </div>
-            <div class="element_form">
-                <label id="categoria">Categoria
-                    <input type="text">
+                <label for="categoria">Categoría
+                    <input type="text" id="categoria" name="categoria" required>
                 </label>
             </div>
             <div class="boton_contenedor scale-up-center">
-                <button id="button">Guardar</button>
+                <button type="submit" id="button">Guardar</button>
             </div>
         </form>
     </main>
-    </div>
+</div>
+
+<script src="./Scripts/HandleRegistrarGasto.js"></script>
+
 </body>
 </html>
