--- a/Vista/seguimientoGastos.html
+++ b/Vista/seguimientoGastos.html
@@ -7,10 +7,16 @@
     <link rel="stylesheet" href="Estilos/Seguimiento.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> <!-- Incluyendo Chart.js desde un CDN -->
-    <script src="Vista\Scripts\Tracking.js" defer></script>
+    <script src="Vista/Scripts/Tracking.js" defer></script>
+    <style>
+        #graficoGastos {
+            width: 100%;
+            height: 400px; /* Ajusta la altura según sea necesario */
+            border: 1px solid #ddd; /* Añade un borde para verificar la visibilidad */
+        }
+    </style>
 </head>
 <body>
-
 <header class="menu">
     <a href="menu.html" class="logo_blanco_container"><img class="logo_blanco" src="Imagenes/logoBlanco-transformed.png"></a>
     <ul class="lista">
@@ -56,6 +62,5 @@
         </div>
     </div>
 </div>
-
 </body>
 </html>
