cree las rutas, para obtener datos de la tabla categorias, cree la tabla categorias conectada a el usuario que inicia sesion,cree el script para que los datos desde la base de datos se vean en la interfaz y que se pueda editar y se guarde en la base de datos

--- a/Vista/personalizarPresupuesto.html
+++ b/Vista/personalizarPresupuesto.html
@@ -49,18 +49,18 @@
         </thead>
         <tbody>
         <tr>
-            <td class="categoria">ALIMENTO</td>
-            <td class="monto">400,000</td>
+            <td class="categoria"><input type="text" value="ALIMENTO"></td>
+            <td class="monto"><input type="text" value="400,000"></td>
             <td><button class="edit-button" onclick="editarFila(this)">Editar</button></td>
         </tr>
         <tr>
-            <td class="categoria">VIVIENDA</td>
-            <td class="monto">700,000</td>
+            <td class="categoria"><input type="text" value="VIVIENDA"></td>
+            <td class="monto"><input type="text" value="700,000"></td>
             <td><button class="edit-button" onclick="editarFila(this)">Editar</button></td>
         </tr>
         <tr>
-            <td class="categoria">TRANSPORTE</td>
-            <td class="monto">150,000</td>
+            <td class="categoria"><input type="text" value="TRANSPORTE"></td>
+            <td class="monto"><input type="text" value="150,000"></td>
             <td><button class="edit-button" onclick="editarFila(this)">Editar</button></td>
         </tr>
         </tbody>
@@ -71,7 +71,7 @@
         <button class="scale-up-center" id="agregar-categoria"><span>AGREGAR CATEGORIA</span></button>
     </div>
 </main>
-
 <script src="Scripts/CrudCustomizeBudget.js"></script>
+<script src="Scripts/HandleCategoria.js"></script>
 </body>
 </html>
