Se hizo la logica para que no se pueda acceder a otras paginas sin haber realizado el inicio de sesion y se agrego el boton se cerrar sesion

--- a/Vista/registroGastos.html
+++ b/Vista/registroGastos.html
@@ -18,6 +18,8 @@
         <li><a href="seguimiento.html">SEGUIMIENTO</a></li>
         <li><a href="reporte.html">REPORTE</a></li>
     </ul>
+    <button id="logoutButton" class="btn btn-danger">
+        <img src="Imagenes/logout.png" alt="Cerrar sesión">
 </header>
 
 <header id="Titulo" class="container-fluid">
@@ -58,6 +60,9 @@
 </div>
 
 <script src="./Scripts/HandleRegistrarGasto.js"></script>
+
+<script src="Scripts/Seguridad.js"></script>
+
 
 </body>
 </html>
