--- a/Vista/menu.html
+++ b/Vista/menu.html
@@ -5,13 +5,12 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="Estilos/Menu.css" >
+    <link rel="stylesheet" href="Estilos/Menu.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <title>Menu principal</title>
-
 </head>
 <body>
 <header class="menu">
@@ -23,10 +22,13 @@
         <li><a href="registroGastos.html">SEGUIMIENTO</a></li>
         <li><a href="registroGastos.html">REPORTE</a></li>
     </ul>
+    <!-- Botón de cerrar sesión -->
+    <button id="logoutButton" class="btn btn-danger">
+        <img src="Imagenes/logout.png" alt="Cerrar sesión">
+    </button>
 </header>
 
 <div class="content">
-
     <aside class="logo col-5">
         <img class="tracking-in-expand" src="Imagenes/logosinfondo.png">
     </aside>
@@ -34,8 +36,10 @@
     <main class="principal col-3">
         <h1 class="titulo tracking-in-expand">MONEYMATE</h1>
         <p class="descripcion tracking-in-expand">NOS ALEGRA TENERTE AQUI. EN MONEYMATE, NUESTRA
-                                MISION ES AYUDARTE A TOMAR EL CONTROL DE TUS FINANZAS PERSONALES DE MANERA SENCILLA Y EFECTIVA.</p>
+            MISION ES AYUDARTE A TOMAR EL CONTROL DE TUS FINANZAS PERSONALES DE MANERA SENCILLA Y EFECTIVA.</p>
     </main>
 </div>
+
+<script src="Scripts/Seguridad.js"></script>
 </body>
 </html>
