adaptado para que sirva con la base de datos de railway

--- a/Vista/personalizarPresupuesto.html
+++ b/Vista/personalizarPresupuesto.html
@@ -48,21 +48,21 @@
         </tr>
         </thead>
         <tbody>
-        <tr>
-            <td class="categoria"><input type="text" value="ALIMENTO"></td>
-            <td class="monto"><input type="text" value="400,000"></td>
-            <td><button class="edit-button" onclick="editarFila(this)">Editar</button></td>
-        </tr>
-        <tr>
-            <td class="categoria"><input type="text" value="VIVIENDA"></td>
-            <td class="monto"><input type="text" value="700,000"></td>
-            <td><button class="edit-button" onclick="editarFila(this)">Editar</button></td>
-        </tr>
-        <tr>
-            <td class="categoria"><input type="text" value="TRANSPORTE"></td>
-            <td class="monto"><input type="text" value="150,000"></td>
-            <td><button class="edit-button" onclick="editarFila(this)">Editar</button></td>
-        </tr>
+<!--        <tr>-->
+<!--            <td class="categoria"><input type="text" value="ALIMENTO"></td>-->
+<!--            <td class="monto"><input type="text" value="400,000"></td>-->
+<!--            <td><button class="edit-button" onclick="editarFila(this)">Editar</button></td>-->
+<!--        </tr>-->
+<!--        <tr>-->
+<!--            <td class="categoria"><input type="text" value="VIVIENDA"></td>-->
+<!--            <td class="monto"><input type="text" value="700,000"></td>-->
+<!--            <td><button class="edit-button" onclick="editarFila(this)">Editar</button></td>-->
+<!--        </tr>-->
+<!--        <tr>-->
+<!--            <td class="categoria"><input type="text" value="TRANSPORTE"></td>-->
+<!--            <td class="monto"><input type="text" value="150,000"></td>-->
+<!--            <td><button class="edit-button" onclick="editarFila(this)">Editar</button></td>-->
+<!--        </tr>-->
         </tbody>
     </table>
 
