--- a/Vista/seguimientoGastos.html
+++ b/Vista/seguimientoGastos.html
@@ -36,9 +36,9 @@
         <div class="row">
             <div class="col-md-3">
                 <div class="categorias">
-                    <button class="btn btn-light w-100 mb-2">COMIDA<br>$400.000</button>
-                    <button class="btn btn-light w-100 mb-2">TRANSPORTE<br>$150.000</button>
-                    <button class="btn btn-light w-100 mb-2">ENTRETENIMIENTO<br>$100.000</button>
+                    <button class="btn btn-light mb-2">COMIDA<br>$400.000</button>
+                    <button class="btn btn-light mb-2">TRANSPORTE<br>$150.000</button>
+                    <button class="btn btn-light mb-2">ENTRETENIMIENTO<br>$100.000</button>
                 </div>
             </div>
             <div class="col-md-6">
