--- a/Vista/personalizarPresupuesto.html
+++ b/Vista/personalizarPresupuesto.html
@@ -24,8 +24,8 @@
 </head>
 <body>
 <header class="menu">
-    <a href="menu.html" class="logo_blanco_container"><img class="logo_blanco" src="Imagenes/logoBlanco-transformed.png"></a>
-
+    <a href="menu.html" class="logo_blanco_container"><img class="logo_blanco"
+                                                           src="Imagenes/logoBlanco-transformed.png"></a>
     <ul class="lista">
         <li><a href="registroGastos.html">REGISTRAR GASTOS</a></li>
         <li><a href="personalizarPresupuesto.html">PERSONALIZAR PRESUPUESTO</a></li>
