--- a/Vista/reporte.html
+++ b/Vista/reporte.html
@@ -12,12 +12,13 @@
 <body>
 
 <header class="menu">
-    <a href="menu.html" class="logo_blanco_container"><img class="logo_blanco" src="Imagenes/logoBlanco-transformed.png"></a>
+    <a href="menu.html" class="logo_blanco_container"><img class="logo_blanco"
+                                                           src="Imagenes/logoBlanco-transformed.png"></a>
     <ul class="lista">
         <li><a href="registroGastos.html">REGISTRAR GASTOS</a></li>
         <li><a href="personalizarPresupuesto.html">PERSONALIZAR PRESUPUESTO</a></li>
         <li><a href="seguimientoGastos.html">SEGUIMIENTO</a></li>
-        <li><a href="reporte.html">REPORTE</a></li>
+        <li><a href="registroGastos.html">REPORTE</a></li>
     </ul>
 </header>
 
