Se agrego los cambios que se habian realizado en la rama de felipe

--- a/Vista/adminView.html
+++ b/Vista/adminView.html
@@ -18,6 +18,9 @@
         <li><a href="seguimientoGastos.html">SEGUIMIENTO</a></li>
         <li><a href="reporte.html">REPORTE</a></li>
     </ul>
+    <button id="logoutButton" class="btn btn-danger">
+        <img src="Imagenes/logout.png" alt="Cerrar sesión">
+    </button>
 </header>
 
 <div id="Titulo">Vista de Administrador</div>
@@ -65,6 +68,6 @@
         <p>Total Usuarios Activos: <span id="totalUsuariosActivos">0</span></p>
     </div>
 </div>
-
+<script src="Scripts/Seguridad.js"></script>
 </body>
 </html>
