--- a/Vista/menu.html
+++ b/Vista/menu.html
@@ -23,6 +23,11 @@
         <li><a href="seguimientoGastos.html">SEGUIMIENTO</a></li>
         <li><a href="registroGastos.html">REPORTE</a></li>
     </ul>
+
+    <button id="logoutButton" class="btn btn-danger">
+        <img src="Imagenes/logout.png" alt="Cerrar sesión">
+    </button>
+
 </header>
 
 <div class="content">
@@ -37,5 +42,6 @@
                                 MISION ES AYUDARTE A TOMAR EL CONTROL DE TUS FINANZAS PERSONALES DE MANERA SENCILLA Y EFECTIVA.</p>
     </main>
 </div>
+<script src="Scripts/Seguridad.js"></script>
 </body>
 </html>
