--- a/Vista/personalizarPresupuesto.html
+++ b/Vista/personalizarPresupuesto.html
@@ -32,6 +32,9 @@
         <li><a href="seguimientoGastos.html">SEGUIMIENTO</a></li>
         <li><a href="registroGastos.html">REPORTE</a></li>
     </ul>
+    <button id="logoutButton" class="btn btn-danger">
+        <img src="Imagenes/logout.png" alt="Cerrar sesión">
+    </button>
 </header>
 
 <main>
@@ -73,5 +76,6 @@
 </main>
 <script src="Scripts/CrudCustomizeBudget.js"></script>
 <script src="Scripts/HandleCategoria.js"></script>
+<script src="Scripts/Seguridad.js"></script>
 </body>
 </html>
