--- a/Vista/reporte.html
+++ b/Vista/reporte.html
@@ -20,6 +20,9 @@
         <li><a href="seguimientoGastos.html">SEGUIMIENTO</a></li>
         <li><a href="registroGastos.html">REPORTE</a></li>
     </ul>
+    <button id="logoutButton" class="btn btn-danger">
+        <img src="Imagenes/logout.png" alt="Cerrar sesión">
+    </button>
 </header>
 
 <header id="Titulo" class="container-fluid text-center">
