--- a/Vista/seguimientoGastos.html
+++ b/Vista/seguimientoGastos.html
@@ -17,6 +17,7 @@
     </style>
 </head>
 <body>
+
 <header class="menu">
     <a href="menu.html" class="logo_blanco_container"><img class="logo_blanco" src="Imagenes/logoBlanco-transformed.png"></a>
     <ul class="lista">
@@ -25,6 +26,9 @@
         <li><a href="seguimientoGastos.html">SEGUIMIENTO</a></li>
         <li><a href="reporte.html">REPORTE</a></li>
     </ul>
+    <button id="logoutButton" class="btn btn-danger">
+        <img src="Imagenes/logout.png" alt="Cerrar sesión">
+    </button>
 </header>
 
 <header id="Titulo" class="container-fluid text-center">
