--- a/Vista/reporte.html
+++ b/Vista/reporte.html
@@ -17,7 +17,6 @@
     <ul class="lista">
         <li><a href="registroGastos.html">REGISTRAR GASTOS</a></li>
         <li><a href="personalizarPresupuesto.html">PERSONALIZAR PRESUPUESTO</a></li>
-        <li><a href="seguimientoGastos.html">SEGUIMIENTO</a></li>
         <li><a href="registroGastos.html">REPORTE</a></li>
     </ul>
     <button id="logoutButton" class="btn btn-danger">
@@ -87,6 +86,8 @@
         </div>
     </div>
 </div>
+<script src="Scripts/Seguridad.js"></script>
+
 
 </body>
 </html>
