cambios de front con pagina de cursos

--- a/Vista/reporte.html
+++ b/Vista/reporte.html
@@ -20,6 +20,7 @@
                 <li><a href="registroGastos.html">REGISTRAR GASTOS</a></li>
                 <li><a href="personalizarPresupuesto.html">PERSONALIZAR PRESUPUESTO</a></li>
                 <li><a href="registroGastos.html">REPORTE</a></li>
+                <li><a href="cursos.html">CURSOS</a></li>
             </ul>
             <button id="logoutButton" class="btn btn-danger">
                 <img src="Imagenes/logout.png" alt="Cerrar sesión">
