--- a/Vista/menu.html
+++ b/Vista/menu.html
@@ -23,6 +23,7 @@
         <li><a href="registroGastos.html">REGISTRAR GASTOS</a></li>
         <li><a href="personalizarPresupuesto.html">PERSONALIZAR PRESUPUESTO</a></li>
         <li><a href="reporte.html">REPORTE</a></li>
+        <li><a href="cursos.html">CURSOS</a></li>
     </ul>
 
     <button id="logoutButton" class="btn btn-danger">
