actualizacion explicacion secciones

--- a/Vista/personalizarPresupuesto.html
+++ b/Vista/personalizarPresupuesto.html
@@ -40,8 +40,16 @@
 </header>
 
 <main>
+
     <div class="titulo">
-        <h1>PERSONALIZAR PRESUPUESTO</h1>
+        <div class="explicacion">
+            <p>
+                En esta página puedes ajustar tu presupuesto según tus necesidades.
+                Agrega nuevas categorías, edita las existentes o elimina las que ya no sean necesarias.
+                Esto te permitirá tener un control detallado sobre cómo distribuyes tus recursos
+                y mantener tus finanzas organizadas.
+            </p>
+        </div>
     </div>
 
     <table class="tabla">
