--- a/Vista/registroGastos.html
+++ b/Vista/registroGastos.html
@@ -31,7 +31,16 @@
     </header>
     <div class="row">
     <aside id="logo" class="col-3">
-        <img  id="cerdo" src="Imagenes/logosinfondo.png">
+        <div id="descripcion-pagina">
+            <h2>¿Qué puedes hacer aquí?</h2>
+            <p>
+                En esta página puedes registrar todos tus gastos de manera organizada y detallada.
+                Simplemente ingresa la cantidad, la fecha, una descripción del gasto y selecciona una
+                categoría que lo identifique. Esta funcionalidad te ayudará a llevar un control claro
+                de tus finanzas personales, permitiéndote analizar tus patrones de consumo y tomar
+                decisiones financieras más inteligentes.
+            </p>
+        </div>
     </aside>
     <main id="principal" class="col-7">
         <form id="formulario">
